--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
     php:
         build:
@@ -6,7 +5,7 @@ services:
         ports:
             - 9000:9000
         volumes:
-            - ./src:/srv/www/api
+            - ./src:/srv/www/api:delegated
             - ./docker/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
         environment:
             MYSQL_USER: ${DB_USER}
@@ -15,17 +14,17 @@ services:
             - db
         links:
             - db
- 
+
     nginx:
         image: nginx:1.17
         ports:
             - 80:80
         volumes:
-            - ./src:/srv/www/api
+            - ./src:/srv/www/api:delegated
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - php
- 
+
     pma:
         image: phpmyadmin/phpmyadmin
         environment:
