--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,20 +1,17 @@
 server {
-    listen 80 default_server;
- 
-    server_name myapp.loc www.myapp.loc;
- 
-    root /srv/www/api;
- 
+    listen 80;
+    server_name localhost;
+    root /srv/www/api/public;  # Point to the public directory
+    index index.php;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
-        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        include fastcgi_params;
     }
- 
-    error_log /var/log/nginx/api_error.log;
-    access_log /var/log/nginx/api_access.log;
 }
