--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         ports:
             - 9000:9000
         volumes:
-            - ./src:/srv/www/api:delegated
+            - ./src:/srv/www/api
             - ./docker/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
         environment:
             MYSQL_USER: ${DB_USER}
