--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,3 +1,5 @@
 FROM php:8.4-fpm
- 
-RUN docker-php-ext-install mysqli
+
+RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql
+
+WORKDIR /var/www/api
