criando página inicial + tabela com form ajax

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,11 +1,15 @@
 server {
     listen 80;
     server_name localhost;
-    root /srv/www/api/public;  # Point to the public directory
+    root /srv/www/;  # Point to the public directory
     index index.php;
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ @php_fallback;
+    }
+
+    location @php_fallback {
+        rewrite ^(.*)$ /index.php last;
     }
 
     location ~ \.php$ {
