--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         ports:
             - 9000:9000
         volumes:
-            - ./src:/srv/www/api
+            - ./src:/srv/www/
             - ./docker/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
         environment:
             MYSQL_USER: ${DB_USER}
@@ -20,7 +20,7 @@ services:
         ports:
             - 80:80
         volumes:
-            - ./src:/srv/www/api:delegated
+            - ./src:/srv/www/
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - php
